Aligned Gene Structures section: fix table style issue

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -325,7 +325,7 @@ div.res_left_col {
 
 div.res_height {
   max-height: 300px;
-  overflow: auto;
+  overflow: scroll;
 }
 
 // Style for data center and download table
@@ -337,7 +337,7 @@ table.one-column-emphasis td
 {
   color: #669;
   border-top: 1px solid #e8edff;
-  height: 2em; 
+  height: 2em;
   vertical-align: middle;
 }
 tr:hover td {
@@ -368,7 +368,7 @@ ul.ui-tabs-nav.ui-helper-reset.ui-helper-clearfix.ui-widget-header.ui-corner-all
 .ui-tabs .ui-tabs-panel {
 	padding: 1em 0.4em !important;
   /* apply changes to fit jquery-ui to default layout; OR adjust default layout */
-  // font-family: Arial, sans-serif; 
+  // font-family: Arial, sans-serif;
   // font-size: 12px;
 }
 
@@ -424,8 +424,4 @@ div.pattern table, div.pattern th, div.pattern td {
 div.pattern table.with_border td {
   border-left: 1px solid white;
   text-align: center;
-}
-
-div.additional_pattern {
-  padding-top: 5px;
 }
